# TrimOS

./: .gitignore  PROMPT.md  README.md  build.bat  main.py  pyproject.toml  requirements.txt  trimos.spec
data/: analytics.json  services.json  whitelist.json
data/snapshots/: snapshot_default_20260511_121059.json
trimos/: __init__.py  app.py
trimos/core/: __init__.py  analytics.py  cleaner.py  elevation.py  intelligence.py  monitor.py  optimizer.py  paths.py  scanner.py  snapshots.py  startup.py  whitelist.py
trimos/screens/: __init__.py  analytics_screen.py  confirm_screen.py  deep_clean_screen.py  startup_screen.py
trimos/styles/: trimos.tcss
trimos/widgets/: __init__.py  detail_panel.py  mascot.py  perf_graphs.py  service_table.py
